--- a/Chap3-NEMOdetectors.tex
+++ b/Chap3-NEMOdetectors.tex
@@ -99,7 +99,7 @@
 \subsection{Source foils}
 
 
-\NI The separation of the source foils from the rest of the detector allows the investigation of any $\beta\beta$ emitters. A total of 8.8~kg of seven enriched isotopes have been introduced in the detector. The isotopes with the largest mass were $^{\text{100}}$Mo with 6.91~kg and $^{\text{82}}$Se with 0.93~kg. These two isotopes provide the best sensitivity to search for 0$\nu\beta\beta$ decays. Smaller quantities of five additionnal isotopes are included to measure the 2$\nu\beta\beta$ decay rate, including 0.45~kg of $^{\text{130}}$Te, 0.40~kg of $^{\text{116}}$Cd, 36.6~g of $^{\text{150}}$Nd, 9.43~g of $^{\text{96}}$Zr, and 6.99~g of $^{\text{48}}$Ca. The search for 0$\nu\beta\beta$ decay have also been performed with these isotopes. Alongside the enriched foils, 0.6~kg of very pure natural tellurium and 0.6~kg of ultra-pure copper foils were installed to control and validate the background measurements. The distribution of the isotopes around the 20 sectors are shown in Figure~\ref{NEMO3Sector}. The masses, Q$_{\beta\beta}$ values, and natural abundances ($\eta$) for each of these $\beta\beta$ isotopes are given in Table~\ref{tab:isotopeNEMO3}.
+\NI The separation of the source foils from the rest of the detector allows the investigation of any $\beta\beta$ emitters. A total of 8.8~kg of seven enriched isotopes have been introduced in the detector. The isotopes with the largest mass were $^{\text{100}}$Mo with 6.91~kg and $^{\text{82}}$Se with 0.93~kg. These two isotopes provide the best sensitivity to search for 0$\nu\beta\beta$ decays. Smaller quantities of five additionnal isotopes have been included to measure the 2$\nu\beta\beta$ decay rate, including 0.45~kg of $^{\text{130}}$Te, 0.40~kg of $^{\text{116}}$Cd, 36.6~g of $^{\text{150}}$Nd, 9.43~g of $^{\text{96}}$Zr, and 6.99~g of $^{\text{48}}$Ca. The search for 0$\nu\beta\beta$ decay have also been performed with these isotopes. Alongside the enriched foils, 0.6~kg of very pure natural tellurium and 0.6~kg of ultra-pure copper foils were installed to control and validate the background measurements. The distribution of the isotopes around the 20 sectors are shown in Figure~\ref{NEMO3Sector}. The masses, Q$_{\beta\beta}$ values, and natural abundances ($\eta$) for each of these $\beta\beta$ isotopes are given in Table~\ref{tab:isotopeNEMO3}.
 
 
 
@@ -113,7 +113,7 @@
 
 
 
-\NI Each sector supports a source frame where seven strips of $\beta\beta$ emitter were placed. The five central strips were 2.48~m long and 6.5~cm wide, while the two border strips measured 2.48~m long and 6.3~cm wide. The thickness of the strips are in the range 30~-~60~mg/cm$^\text{2}$, which is a compromise to maximise the isotope mass while mainting the foil thin enough to reduce the scatterings through the foil bulk, and do not degrade the energy resolution.
+\NI Each sector supports a source frame where seven strips of $\beta\beta$ emitter were placed. The five central strips were 2.48~m long and 6.5~cm wide, while the two border strips measured 2.48~m long and 6.3~cm wide. The surface density of the strips are in the range 30~-~60~mg/cm$^\text{2}$, which is a compromise to maximise the isotope mass while mainting the foil thin enough to reduce the scatterings through the foil bulk, and do not degrade the energy resolution.
 
 
 \bigskip
@@ -496,13 +496,13 @@ wiring of four elementary Geiger cells.}
 \subsection{Results and measurements}
 
 
-\NI After seven years of data taking, NEMO-3 have been stopped and disassembled. The strongest limit produced for 0$\nu\beta\beta$ comes from $^{\text{100}}$Mo, with a measurement of T$_{\text{1/2}}^{\text{0}\nu}$~>~1.1~$\times$~10$^{\text{24}}$~y corresponding to m$_{\beta\beta}$~<~0.3~-~0.8~eV \cite{NEMO3:Mo100}.
+\NI After seven years of data taking, NEMO-3 have been stopped and disassembled. The strongest limit produced for 0$\nu\beta\beta$ comes from $^{\text{100}}$Mo, with a measurement of T$_{\text{1/2}}^{\text{0}\nu}$~>~1.1~$\times$~10$^{\text{24}}$~y corresponding to $\langle$m$_{\beta\beta}\rangle$~<~0.3~-~0.8~eV \cite{NEMO3:Mo100}.
 
 
 \bigskip
 
 
-\NI  The results on the searches for 2$\nu\beta\beta$ and 0$\nu\beta\beta$ are gathered in Table~\ref{tab:SummaryDecayRateNEMO3}. Most of these decays have been measured for the first by NEMO-3 and some of them constitute the world best measurement of limits. 
+\NI  The results on the searches for 2$\nu\beta\beta$ and 0$\nu\beta\beta$ are gathered in Table~\ref{tab:SummaryDecayRateNEMO3}. Most of these decays have been measured for the first by NEMO-3 and some of them constitute the world best measurements or limits. 
 
 
 \bigskip
@@ -537,28 +537,233 @@ $^{\text{48}}$Ca \cite{NEMO3:Ca48} & [6.4 $\times$ $^{+\text{0.7}}_{-\text{0.6}}
 
 \FloatBarrier
 
-
-\section{SuperNEMO}\label{sec:SuperNEMO}
-
-
-\subsection{From NEMO-3 to SuperNEMO}
+\newpage
 
 
-\subsection{SuperNEMO demonstrator}
+\section{The SuperNEMO demonstrator module}\label{sec:SuperNEMO}
+
+
+\NI Based on the success of NEMO-3, a new detector, SuperNEMO, have been proposed. The idea of this detector is to perform a background-free search for 0$\nu\beta\beta$ decay (10$^{\text{-4}}$~events/keV/kg/y in the region of interest) [??]. The construction of a first SuperNEMO module is under construction at LSM. This first module, called demonstrator module is based on the same philosophy than NEMO-3. A central frame supports thin $\beta\beta$ foils surrounded by two trackers enclosed by a calorimeter. The module is 4~m high, 6~m long and 2~m wide. Figure~\ref{SuperNEMOexplodedView} shows a exploded view of the demonstrator module.
+
+
+\bigskip
+
+
+\NI SuperNEMO is not only a scaled-up version of NEMO-3. Research and development (R\&D) have be performed in order to upgrade many aspects of the design as the radiopurity componants and the detector performances. This module will be used to valide all the design upgrades and verify that a very low level of background is achievable with such a large mass of detector and source foils. It will contain 7~kg of $^{\text{82}}$Se to reach a half-life sensitivity of $\sim$~6~$\times$~10$^{\text{24}}$~years, after 2.5~years of data-taking, in best case scenario.
+
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.65]{pictures/Chap3/snemomodule.png}
+\caption{Exploded view of one module of SuperNEMO. Thin source foils of $^{\text{82}}$Se are place at the center of the detector. Two trackers modules made of 2034 Geiger cells reconstruct the electron tracks. Two calorimeters walls measure the energy of the electrons.}
+\label{SuperNEMOexplodedView}
+\end{center}
+\end{figure}
+
+
+\FloatBarrier
+
+
+\subsection{Source foils}
+
+
+\NI The demonstrator module will contain 7~kg of $^{\text{82}}$Se, enriched in Russia using a centrifugation method. The choice of this isotope has been mainly motivated because none of its characteristics, phase space, NME, 2$\nu\beta\beta$ half-life and isotropic abundance, is an obstacle to search for 0$\nu\beta\beta$. Futhermore its high transition energy is far away from majority of the background coming from radioactivity.
+Since the source foils are the central part of the detector, it has the strictest radiopurity requirements, respectively 2$\mu$Bq/kg and 10$\mu$Bq/kg in $^{\text{208}}$Tl and $^{\text{214}}$Bi.
+
+\bigskip
+
+
+\NI The source is divided in 36 foils of~2.7~m long as shown in Figure~\ref{SuperNEMOFoils}. The 34 central foils are 13.55~cm width, and the 2 border foils are 12.5~cm width.
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.33]{pictures/Chap3/foil.png}
+\includegraphics[scale=0.075]{pictures/Chap3/P1090162.JPG}
+\caption{Left : Selenium source foils final geometry, it is divided in 36 foils
+(34 with 13.55 cm width and 2 with 12.5 cm width). Right : Picture of one strip : the Se+PVA pad is surrounded by two raw mylar foils. These
+two raw mylar foils are welded.} 
+\label{SuperNEMOFoils}
+\end{center}
+\end{figure}
+
+
+\NI They are composite foils with a surface densities of 40~-~60~mg/cm$^\text{2}$. The selenium is under a powder form which is mixed with a radiopure glue (PolyVinyl Alcohol~:~PVA) and ultrapure water to obtain a liquid paste. This paste is then spread out between two mylar sheets of 10~$\mu$m thick. The mylar films have micro-holes to allow a good coupling between the paste and the foil and facilitate evaporation. These holes was made by a ions beam which can contaminate the source foil. It is in this optic that a new foil fabrication procedure have been proposed and studied in R\&D. The new method consists of unfolding the selenium foil and cut it into pads. These pads are then inserted into two mylar foils without holes, joined with a weld. A picture of one manufactured foil is shown in Figure~\ref{SuperNEMOFoils}. More detailled on source foil optimisation will be given in Chapter~4.
+
+
+\bigskip
+
+
+\NI To measure the very strict purity of the foils, 2$\mu$Bs/kg and 10$\mu$Bs/kg in $^{\text{208}}$Tl and $^{\text{214}}$Bi respectively, the NEMO collaboration decided to develop and build a dedicated detector called BiPo~\cite{BiPoDetector}. The BiPo detector is based on the observation of the so-called Bi-Po events from the decay chain of $^{\text{238}}$U and $^{\text{232}}$Th. Bi-Po events are cascades of $\beta$ and delayed $\alpha$ decays. For example, as shown in Figure~\ref{BiPoDecayChain}, in uranium decay chain, $^{\text{214}}$Bi is a $\beta$ emitter decaying to $^{\text{214}}$Po, which is itself an $\alpha$ emitter with a characteristic half-life of 164~$\mu$s.
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.33]{pictures/Chap3/BiPoDecayChain.png}
+\caption{The $^{\text{214}}$Bi$^{\text{214}}$Po and $^{\text{212}}$Bi$^{\text{212}}$Bi cascades used to measure the $^{\text{214}}$Bi and $^{\text{208}}$Tl contaminations.}
+\label{BiPoDecayChain}
+\end{center}
+\end{figure}
+
+
+\NI The BiPo detector have been installed in 2012 at Canfranc Underground Laboratory in Spain. It is made of 2 identical modules, each of them containing 40 scintillator blocks (coupled with 5'' PMTs). Each optical module covers an aera of 30 $\times$ 30 cm$^\text{2}$, as presented in Figure~\ref{BiPoDetector}. This segmentation allows detection of possible hot spots on the foil. In a first step, the detector took data without any foils to measure its own level of background. The results of 0.16~$\mu$Bq/m$^\text{2}$ in $^{\text{214}}$Bi and 1.28~$\mu$Bq/m$^\text{2}$ in $^{\text{208}}$Tl allow to reach the expected sensitivity of 10 and 2~$\mu$Bq/kg in $^{\text{214}}$Bi and $^{\text{208}}$Tl, in few month of data taking~\cite{BiPoDetector}. Then, BiPo detector measured different components enter in the source foils as the PVA or the mylar film. The results of these measurements will be given in Chapter~4. Finally, some final foils have been measured before to be introduced in the demonstrator in order to validate their radiopurity. More details are given in Appendix~1.  
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=1.1]{pictures/Chap3/snemo_bipo.png}
+\caption{Left : Pair of sub-modules coupled face to face. The green part represents the thin scintillators. The optical guides appear in blue and the PMTs in red. Right : assembly of the 40 optical sub-modules.}
+\label{BiPoDetector}
+\end{center}
+\end{figure}
+
+
+
+\FloatBarrier
 
 
 \subsection{Tracker}
 
 
+\NI The SuperNEMO tracker is an assembling of four parts called C-sections due to their C-shape. It contains 2034~Geiger cells arranged in 9~layers parallel to the foil within a gas mixture of He~(95~\%), ethyl alcohol~(4~\%), Ar~(1~\%)~\cite{trackerSN}. Each cell is made of a 40~$\mu$m stainless steel central anode surrounded by eight 50~$\mu$m ground wires. To maintain the tracking properties of the detector, the mixture ratio of the gas must be kept constant. A gas system have been developed to ensure its mixture, purification, and sends into the detector. 
+
+ 
+
+
+\bigskip
+
+
+\NI In order to reduce the risk of contamination during the manufactoring phase of wires, a wiring robot have been design and construct. A great care have also been taken concerning the radiopurity of the meterials. Each of them have been tested in germanium detector. The construction of the C-sections took place under a clean room conditions at the Mullard Space Science Laboratory~(MSSL). To validate both the mechanical processes and the choice of the marterials, emanation measurement of three of the four C-sections have been realized. The last C-section have not been measured since it has been considered that nothing change in its material and production process. The results of these measurements are summarized in Table~\ref{tab:RadonEmanation}. Extrapolated to full demonstrator, the value of the activity is 0.21~mBq/m$^{\text{3}}$ can be obtained at nominal flowrate. The value of 0.12~mBq/m$^{\text{3}}$ can be achieved when the flush is at 1m$^{\text{3}}$/hr.
+
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{c|c}
+Cassette & Radon emanation \\
+\toprule
+C0 & 11.37 $\pm$ 1.44~mBq \\
+C1 & 15.26 $^{+\text{2.5}}_{\text{4.0}}$~mBq \\
+C2 & 3.28 $\pm$ 1.39~mBq \\
+\bottomrule
+\end{tabular}
+\caption{Summary of the emanation measurements of the different cassette. The C4 have not been measured.}
+\label{tab:RadonEmanation}
+\end{table}
+
+
+\bigskip
+
+
+\NI The commissioning of the first C-section have been realised using cosmic muon events. Scintillator planes below the tracker volume acting as a trigger. A picture of a C-section and cosmic muon event is shown in Figure~\ref{SnemoTracker}. Finally the total 2034 cells have been tested, 23~cells are considered as bad due to their self trigger or a bad plasma propagation. The proportion of operational cells is then 98.9~\%. 
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.25]{pictures/Chap3/TrackerTestCosmic.png}
+\caption{Left : picture of one of the four cassette fully assembled. The cassette is set horizontally, later in the SuperNEMO demonstrator, the Geiger cells will be vertical, parallel to the source foil. The copper part are the end-caps supporting the wires. Top right : simulation of a cosmic muon crossing throught the tracker. Bottom right : real event of a cosmic muon crossing the tracker.}
+\label{SnemoTracker}
+\end{center}
+\end{figure}
+
+
+\NI In order to improve the impermeability of the seals closing the tracking volume, especially to avoid radon diffusion coming from PMTs, the wire chamber will be isolated from the rest of the detector with a nylon radon-tight film. Futhermore, the entire detector will be inside a radon clean tent.
+
+
+\FloatBarrier
+
+
 \subsection{Calorimeter}
 
 
-
-\newpage
-
+\NI The goals of the SuperNEMO calorimeter are the same than NEMO-3 calorimeter, mesure the energy and arrival time of particles and provide a fast trigger. The calorimeter of the SuperNEMO demonstrator is composed of 712 optical modules distributed in six walls~\cite{SNCalorimeter}.
 
 
-\NI Based on the NEMO-3 experiment, SuperNEMO is a new detector among the next generation searching for 0$\nu\beta\beta$. The strategy consists to take advantage of the previous detectors and increase the isotope mass of an improve the radiopurity. A total of 100~kg of isotopes could be studied allowing to reach 10$^{\text{26}}$~years on the 0$\nu\beta\beta$ process. The SuperNEMO project is composed of 20 identical modules. Thanks of several years of R\&D, great improvement have also been made concerning the energy resolution of the calorimeter. Table~\ref{tab:DifferenceNEMO3-SuperNEMO} summarizes the difference in performance for NEMO-3 detector and SuperNEMO project.
+\bigskip
+
+
+\NI The two main walls are located on opposite sides of the of the source foil faces. Each main wall contains 260~polystyrene cubic scintillator blocks of 256~mm $\times$ 256~mm $\times$ 194~mm, coupled to 8'' low radioactive PMT (R5912-03). The main difference with the NEMO-3 blocks is that the PMT is directly coupled to the scintillator block as shown in Figure~\ref{SnemoOpticalModule}. Futhermore, the polystyrene scintillator used in NEMO-3 have been replaced with poly-vinyl toluene (PVT). Thanks to this new design the energy resolution have been improved by a factor two, the FWHM have been measured to be 8~\% at 1~MeV.
+
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.25]{pictures/Chap3/calo_1.png}
+\caption{Optical module composing the calorimeter before to be wrapped into teflon and mylar. The scintillator block is directly coupled to the PMT.}
+\label{SnemoOpticalModule}
+\end{center}
+\end{figure}
+
+
+
+\NI The calorimeter is completed with two $\gamma$-veto capping the top and the bottom of the detector containing 64~plastics scintillator blocks of 210~mm $\times$ 200~mm $\times$ 145~mm. These blocks are coupled to 5'' PMTs (R6594). Finally, two x-walls cover the sides of the detector for. They are made of 32~plastics scintillator blocks (290~mm $\times$ 304~mm $\times$ 145~mm) also coupled to 5'' PMT. Note that the first and last rows of the main wall are coupled with 5''~PMTs since these blocks are partially cover by the $\gamma$-veto and will probably not be used for the analysis.
+
+\bigskip
+
+
+\NI To improve the light collection, all the blocks are wrapped into teflon for each block sides except the entry face which is covered by 6~$\mu$m of aluminized mylar. Figure~\ref{SnemoCaloFrontView} is a picture of the SuperNEMO main wall during its construction at LSM. A free-radon air will be introduced very close to the PMT to avoid high radon concentration coming from PMT emanations.
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.5]{pictures/Chap3/FrontViewCalo.png}
+\caption{Front view of one main wall during its construction. The wall is built by assembling the bricks (8 by 8).}
+\label{SnemoCaloFrontView}
+\end{center}
+\end{figure}
+
+\FloatBarrier
+
+
+\subsection{Calibration system}
+
+
+\NI The strategy to calibrate both energy and time is the same as that used in NEMO-3. Monthly, during dedicated runs, $^{\text{207}}$Bi sources will be introduced in the detector to calibrate the absolute energy scale. Between these runs, the response and the linearity of the optical modules is monitored daily. 
+
+
+\bigskip
+
+
+\NI A first improvement in the calibration system consists of the removal of the calibration tubes in which the sources were introduced. In this new system, the $^{\text{207}}$Bi sources are guided into position thanks to a system of weights and stepper motors. In this way, no material will remin in the detector outside the calibration runs.
+
+
+\bigskip
+
+
+\NI To monitor the response of the optical modules a light injection system have been developed. The idea is exactly the same as it was with the laser survey but the lasers have been replaced by LEDs. A schematic view of the light injection system system is presented in Figure~\ref{LIschema}. 20 UV LEDs will inject pulsed LED light into each scintillator blocks via optical fibers. A reference optical module is used to monitor the light level against a $^{\text{241}}$Am source.
+
+
+\bigskip
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.3]{pictures/Chap3/LIschema.png}
+\caption{Schematic representation of the light injection system. Installed in an independant rack, a pulser will send into each optical module UV light via optical fibers. A reference PMT coupled to an americium-241 source is used to control the light level.}
+\label{LIschema}
+\end{center}
+\end{figure}
+
+
+\subsection{Shieldings}
+
+
+\NI The strategy to protect the detector against the neutron and $\gamma$-ray fluxes is the same as used in NEMO-3. A shielding made of 20~cm of iron, 20~cm of paraffin will be installed around the detector. These shielding will be surrounded themselves by 35~cm of borated water and 30~cm of wood. Finally, to minimse radon diffusion an anti-radon tent will surround the detector and will be constantly flushed with filtered air.
+
+
+\subsection{Prospectives}
+
+
+\NI The construction of the demonstrator began with most of the different components already manufactured and present at LSM. The first and second calorimeter walls was built at the end of 2016 and beginning of 2017. Two C-sections have been assembled and coupled to the first calorimeter wall to form a half-detector. The installation of the source foils is planned to be during the summer of 2017, just after the source deployment system. The gas system has been installed.
+
+\bigskip
+
+
+\NI In case demonstrator module is successful, other SuperNEMO module could be deployed. The idea would be to investigate 0$\nu\beta\beta$ with 100~kg of $^{\text{82}}$Se to reach a half-life sensitivity of~10$^{\text{26}}$~years, corresponding to an effective neutrino mass of 50~-~100~meV [ref]. The 100~kg of $^{\text{82}}$Se could be divided between 20 identical and individual modules, in a way to provide flexibility in the modules location as they can be arranged to maximise the available space in underground laboratories. As the source is decoupled from the detector, other isotopes as $^{\text{150}}$Nd and $^{\text{48}}$Ca could also been introduced.
+
+
+\bigskip
+
+
+\NI Table~\ref{tab:DifferenceNEMO3-SuperNEMO} summaries key experimental achievements of NEMO-3 and the target levels for SuperNEMO to reach the sensitivity of~10$^{\text{26}}$~years. 
 
 
 \begin{table}[h!]
@@ -582,291 +787,12 @@ Level of radon A($^{\text{222}}$Rn)& $\sim$ 5.0 mBq/m$^\text{3}$ y   & < 0.1 mBq
 Sensitivity after 5~y of data taking & T$_{\text{1/2}}^{\text{0}\nu}$ > 10$^{\text{24}}$ & T$_{\text{1/2}}^{\text{0}\nu}$ > 10$^{\text{26}}$     \\[0.1cm]
 \bottomrule
 \end{tabular}
-\caption{Summary of the difference in performance for NEMO-3 detector and SuperNEMO project.}
+\caption{Summary of the key experimental achievements of NEMO-3 and the target levels for SuperNEMO.}
 \label{tab:DifferenceNEMO3-SuperNEMO}
 \end{table}  
 
-\FloatBarrier
-
-
-\subsection{The SuperNEMO demonstrator module}
-
-
-\NI Before to build the 20 modules and in order to verify and validate the low level of background at large scale, the collaboration is building a first module called demonstrator module. This module will also serve to validate the technological choices (detection efficiency of the tracker, energy resolution of the calorimeter and source foil purification process). This module will contain 7~kg of $^{\text{82}}$Se in the form of thin source foils for physics study ($\sim$ 6.0 $\times$ 10$^{\text{24}}$~years on the 0$\nu\beta\beta$ process). 
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.55]{pictures/Chap3/snemomodule.png}
-\caption{Exploded view of one module of SuperNEMO. Thin source foils of $^{\text{82}}$Se are place at the center of the detector. 2 trackers modules made of 2034 Geiger cells reconstruct the electron tracks. 2 calorimeters walls measure the electron energies.}
-\label{SuperNEMOexplodedView}
-\end{center}
-\end{figure}
-
-
-\NI Figure~\ref{SuperNEMOexplodedView} presents a exploded view the demonstrator module. A planar geometry have been chosen. A central frame supports the thin foils of $\beta\beta$ emitters. The foils are sandwiched surrounded by the 2 tracker modules and 2 calorimeter walls inside water and iron shieldings. 
-
 
 \FloatBarrier
-
-
-\subsection{$^{\text{82}}$Se source foils}
-
-
-\NI To choose the isotope of the demonstrator module a compromise must be find between many parameters. The choice have been made to use $^{\text{82}}$Se because of  its long 2$\nu\beta\beta$ half-life (to limit the irreducible background from 2$\nu\beta\beta$ in the search for 0$\nu\beta\beta$), its great Q$_{\beta\beta}$ (to limit the background coming from natural radioactivity) and a possible enrichment on a large scale. Some studies have been made for a possible used of $^{\text{150}}$Nd and $^{\text{48}}$Ca in a second phase of SuperNEMO.
-
-
-\bigskip
-
-
-\NI The source is divided in 36 foils (34 with 13.55 cm width and 2 with 12.5 cm width). A drawing of the source foil geometry can be found in Figure~\ref{SuperNEMOFoils}. The width of the total source is 485.7 cm, its height is 270.0 cm for a total surface of 131 139 cm$^\text{2}$ and a mean density of 55 mg/cm$^\text{2}$.
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.33]{pictures/Chap3/foil.png}
-\includegraphics[scale=0.075]{pictures/Chap3/P1090162.JPG}
-\caption{Left : Selenium source foils final geometry, it is divided in 36 foils
-(34 with 13.55 cm width and 2 with 12.5 cm width). Right : Picture of one strip : the Se+PVA pad is surrounded by two raw mylar foils. These
-two raw mylar foils are welded.} 
-\label{SuperNEMOFoils}
-\end{center}
-\end{figure}
-
-
-\NI The selenium is under a powder form. This powder is mixed with a radiopure glue (PolyVinyl Alcohol : PVA) and ultrapure water to obtain a liquid paste. This paste is spread out between two a mylar sheet of 10~$\mu$m thick pierced by micro-holes. These micro-holes allow a good coupling between the paste and the foil and facilitate evaporation. Unfortunately, these holes was made at JINR Dubna using a ions beam which can contaminate the source foil. It is in this optic that a new foil fabrication procedure have been proposed and studied in R\&D. The second method consists of unfolding the selenium foil and cut it into pads. These pads are then inserted into two mylar foils joined with a weld (mylar without micro-holes so not irradiated). More detailled on source foil optimisation will be given in Chapter~4.
-
-
-\bigskip
-
-
-\NI To reach a sensitivity of 10$^{\text{26}}$~years, the required level of radiopurity is 2$\mu$Bs/kg and 10$\mu$Bs/kg for $^{\text{208}}$Tl and $^{\text{214}}$Bi. The selenium must be enriched and purified. Two purification methods have been studied  : a chemical one and by distillation. 
-
-\ifx
-aa
-\fi
-
-\FloatBarrier
-
-
-\subsection{The BiPo detector}
-
-
-\NI The measurement of very low levels of radiopurity is not possible using germanium detector, as is generally the case. Their sensitivity is around 50 $\mu$Bq/kg for the level of $^{\text{208}}$Tl. The NEMO collaboration decided to develop and build a detector dedicated to the measurement of very low contaminations (in $^{\text{214}}$Bi and $^{\text{208}}$Tl ) of the source foils.
-
-
-\bigskip  
-
-
-\NI To identify $^{\text{214}}$Bi and $^{\text{208}}$Tl, the BiPo detector~\cite{BiPoDetector} is based on the observation of the so-called BiPo events. In the decay chain of $^{\text{238}}$U and $^{\text{232}}$Th, BiPo events are cascades of $\beta$ and delayed $\alpha$ decays. For example, as shown in Figure~\ref{BiPoDecayChain}, in uranium decay chain, $^{\text{214}}$Bi is a $\beta$ emitter decaying to $^{\text{214}}$Po, which is itself an $\alpha$ emitter with a characteristic half-life of 164~$\mu$s.
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.33]{pictures/Chap3/BiPoDecayChain.png}
-\caption{The $^{\text{214}}$Bi$^{\text{214}}$Po and $^{\text{212}}$Bi$^{\text{212}}$Bi cascades used to measure the $^{\text{214}}$Bi and $^{\text{208}}$Tl contaminations.}
-\label{BiPoDecayChain}
-\end{center}
-\end{figure}
-
-
-\NI In order to detect the e$^-$ and $\alpha$ particles, the sources are installed between two thin ultra-radiopure plastic scintillators couplingto low radiative PMTs, as schematized in Figure~\ref{BiPoEvent}. 
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.3]{pictures/Chap3/BiPoEvent_2.png}
-\caption{Left : schematic view of the BiPo detection technique with the source  foil  inserted  between  two  plastic  scintillators  plate. Right : scintillation signal waveforms acquired for a BiPo event. The prompt signal  and  the  delayed signal observed  by  the  top  and  bottom scintillators respectively are schematically shown.}
-\label{BiPoEvent}
-\end{center}
-\end{figure}
-
-
-\NI The BiPo detector have been installed in 2012 at Canfranc Underground Laboratory in Spain. It is made of 2 identical modules, each of them containing 40 scintillator blocks (coupled with 5'' PMTs). Each optical module covers an aera of 30 $\times$ 30 cm$^\text{2}$, as presented in Figure~\ref{BiPoDetector}. This segmentation allows detection of possible hot spots on the foil. 
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=1.1]{pictures/Chap3/snemo_bipo.png}
-\caption{Left : Pair of sub-modules coupled face to face. The green part represents the thin scintillators. The optical guides appear in blue and the PMTs in red. Right : assembly of the 40 optical sub-modules.}
-\label{BiPoDetector}
-\end{center}
-\end{figure}
-
-
-\bigskip
-
-
-\NI In a first step, the detector took data without any foils to measure its own level of background. The results of 0.16~$\mu$Bq/m$^\text{2}$ in $^{\text{214}}$Bi and 1.28~$\mu$Bq/m$^\text{2}$ in $^{\text{208}}$Tl allow to reach the expected sensitivity (10 and 2~$\mu$Bq/kg in $^{\text{214}}$Bi and $^{\text{208}}$Tl) in few month of data taking.
-
-\FloatBarrier
-
-
-\subsection{Tracking volume}
-
-
-\NI The tracking volume of SuperNEMO consists of 2 tracker modules made of 9 layers of 113 Geiger cells (for a total of 2034 Geiger cells). Each module is divided into 2 cassettes (for a total of 4 cassettes called C0, C1, C2 and C3) and mesure 5~m long, 3.4~m high and 40~cm depth. The tracker cells have been built and tested in Manchester before being transport at LSM.
-
-
-\bigskip
-
-
-\NI The commissioning of the first cassette used cosmic muon events with scintillator planes below the tracker volume 
-acting as a trigger. A picture of a cassette and cosmic muon event is shown in Figure~\ref{SnemoTracker}. Of the 2034 tested cells, 23 are considered as bad (self trigger or plasma block). The proportion of operational channels is 98.9~\%. 
-
-
-\bigskip
-
-
-\NI During the R\&D phase a great care have been taken in order to drastically reduce the presence of radon inside the tracking volume. Based on the NEMO-3 analysis, 2 main reasons have been identified : the emanation of radon coming from the tracking device materials and a bad impermeability of the seals closing the volume (easy diffusion of the radon coming from PMTs).
-
-
-\bigskip
-
-\NI During the R\&D phase, different points have been studied to improve the wire chamber compared to NEMO-3 : 
-
-
-\begin{itemize}
-\item now, the wire chamber is isolated from the rest of the detector with a nylon radon-tight film.
-
-
-\item Free-radon air will be introduced very close to the PMT to avoid high radon concentration. Futhermore, the entire detector will be inside a radon clean tent.
-
-
-\item To maintain the tracking properties of the detector, the mixture ratio of the gas must be kept constant 
-(95~\% Helium, 4~\% Ethanol and 1~\% Argon). A gas system ensures minxing and sends the gas into the detector. Great improvement have been done to purify the tracker gas. The helium can be easily purify using a coal traps.
-
-
-\item all the materials placed inside the tracker volume are tested and measured in germanium detector. Emanation measurements are realized on each cassette to check that the mechanical processes have not introduced contaminations. The results of these measurements are summarized in Table~\ref{tab:RadonEmanation}. Extrapolated to full demonstrator, the value of 0.21~mBq/m$^{\text{3}}$ is obtain at nominal flowrate (0.12~mBq/m$^{\text{3}}$ when flushed at 1m$^{\text{3}}$/hr). 
-\end{itemize}
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.25]{pictures/Chap3/TrackerTestCosmic.png}
-\caption{Left : picture of one of the four cassette fully assembled. The cassette is set horizontally, later in the SuperNEMO demonstrator, the Geiger cells will be vertical, parallel to the source foil. The copper part are the end-caps supporting the wires. Top right : simulation of a cosmic muon crossing throught the tracker. Bottom right : real event of a cosmic muon crossing the tracker.}
-\label{SnemoTracker}
-\end{center}
-\end{figure}
-
-
-\begin{table}[h!]
-\centering
-\begin{tabular}{c|c}
-Cassette & Radon emanation \\
-\toprule
-C0 & 11.37 $\pm$ 1.44~mBq \\
-C1 & 15.26 $^{+\text{2.5}}_{\text{4.0}}$~mBq \\
-C2 & 3.28 $\pm$ 1.39~mBq \\
-\bottomrule
-\end{tabular}
-\caption{Summary of the emanation measurements of the different cassette. The C4 have not been measured.}
-\label{tab:RadonEmanation}
-\end{table}
-
-
-\NI The tracker volume will be coupled with a magnetic field (parallel to the source foil) for charge discrimination. Some studies have been realized to optimize its value (probably 25~G will be applied). 
-
-
-
-\FloatBarrier
-
-\subsection{Calorimeter}
-
-
-\NI The calorimeter of the SuperNEMO demonstrator is composed of 712 optical modules distributed in 6 walls : 
-
-
-\begin{itemize}
-
-\item 2 main walls on opposite sides of the of the source foil faces. Each main wall contains 260~polystyrene cubic scintillator  blocks (256~mm $\times$ 256~mm $\times$ 194~mm) coupled to 8'' low radioactive PMT (R5912-03) which have a quantum efficiency between 35 and 45~\% at 420~nm. A main difference with the NEMO-3 blocks is that the PMT is directly coupled to the scintillator block, no light guide is used as it is shown in Figure~\ref{SnemoOpticalModule}. Thanks to this new design the energy resolution is highly improved (FWHM of 8~\% at 1~MeV).
-
-
-\item 2 $\gamma$-veto to cap the top and the bottom of the detector containing 64~plastics scintillator blocks (210~mm $\times$ 200~mm $\times$ 145~mm) coupled to 5'' PMTs (R6594). 
-
-\item 2 x-walls to cap the sides made of 32~plastics scintillator blocks (290~mm $\times$ 304~mm $\times$ 145~mm) also coupled to 5'' PMT.
-
-\end{itemize}
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.25]{pictures/Chap3/calo_1.png}
-\caption{Optical module composing the calorimeter before to be wrapped into teflon and mylar. The scintillator block is directly coupled to the PMT.}
-\label{SnemoOpticalModule}
-\end{center}
-\end{figure}
-
-
-\NI To improve the light collection, all the blocks are wrapped into teflon for each block sides except the entry face which is covered by 6~$\mu$m of aluminized mylar.
-
-
-\bigskip
-
-
-\NI Figure~\ref{SnemoCaloFrontView} is a picture of the SuperNEMO main wall during its construction at LSM. For lack of 8'' PMTs, all the blocks in the top and bottom rows of the walls are coupled with 5'' PMTs.
-
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.5]{pictures/Chap3/FrontViewCalo.png}
-\caption{Front view of one main wall during its construction. The wall is built by assembling the bricks (8 by 8).}
-\label{SnemoCaloFrontView}
-\end{center}
-\end{figure}
-
-\FloatBarrier
-
-
-\subsection{Calibration system}
-
-
-\NI As it was the case in NEMO-3, 2 systems are used to calibrate the detector. Monthly, via a system of weights and stepper motors, $^{\text{207}}$Bi sources will be introduced inside the detector to calibrate the absolute energy scale. Between these dedicated runs, a light injection system has been developed to monitor the response and the linearity of the optical modules.
-
-
-\bigskip
-
-
-\NI The light injection system (LI) injects pulsed LED light into each scintillator blocks via optical fibers. A schematic view of the LI system is presented in Figure~\ref{LIschema}. Areference optical module is used to monitor the light level against a $^{\text{241}}$Am source. The 20 UV LEDs and the reference PMT are housed in a light-tight rack. The pulse height spectra recorded in a test optical module and reference block are presenter in Figure. 
-
-\bigskip
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.3]{pictures/Chap3/LIschema.png}
-\caption{Schematic representation of the light injection system. Installed in an independant rack, a pulser will send into each optical module UV light via optical fibers. A reference PMT coupled to an americium source is used to control the light level.}
-\label{LIschema}
-\end{center}
-\end{figure}
-
-
-\NI To study how the LI system will be able to monitor and calibrate between $^{\text{207}}$Bi runs, the initial position of the 976~keV peak is used. The goal is to predict where it would be shifted to at a latter time using only the later LED peaks seen and the $^{\text{241}}$Am. Figure shows the ratio between the expected and the obserced signal, even with some jumps, the response of the optical module can be predicted within 1~\%.
-
-\bigskip
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.25]{pictures/Chap3/RatioPredictionLI.png}
-\caption{Ratio of the predicted to measured peak position for the 976~keV $^{\text{207}}$Bi electron. The ratio deviates by not more than 1~\% as shown by the red lines.}
-\label{LIschema}
-\end{center}
-\end{figure}
-
-
-\NI In  the  LI  system,  each  LED  illumates  about  100  optical  fibers. For  linearity  tests  and  for  proper  monitoring  accuracy  the  light  receiced  for  each  optical  fibers  has  to  be  uniform. Many  studies  have  been  realized  in  the  past  to  obtain  the best  uniformity. Other problems as the light attenuation, LED optimisation or light detection are also studied. During my thesis I spent several weeks at Austin (Texas) to work on the LI system. The summary of the work I realized on it are presented in Annex~2.
-
-
-\FloatBarrier
-
-
-\subsection{Prospectives}
-
-\NI \textcolor{red}{Modifier cette partie en fonction des news.}
-
-\NI The detector is in construction phase. All the main modules (tracker and calorimeter) are at LSM. In a first phase, a calorimeter and a tracker have been joined to form a half-detector. Since the beginning of 2017, light and gas leak test are currently ongoing for an half a the detector. The source foils will be installed in .....
-
-
-\bigskip
-
-
-\NI In case the detector is able to demonstrate the feasibility of the experiment at large scale, the collaboration (subject to the necessary resources being made available) will build the other 19 modules. Then, the full SuperNEMO project should reach a sensitivity of 10$^{\text{26}}$~years using 100~kg of $^{\text{82}}$Se. The inital idea was to install all the module inside the new extension of the LSM laboratory. Since this new extension will not be built, the different modules could be separted over the different underground laboratory in the world. 
 
 
 \end{document}
